[package]
name = "pycatai-pet-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Windows-based AI powered desktop pet written in Rust"

[dependencies]
# GUI Framework - sử dụng iced thay cho tkinter
iced = { version = "0.10", features = ["image", "tokio"] }
iced_native = "0.10"

# Hình ảnh
image = "0.24"

# Tương tác với Win32 API
windows = { version = "0.51", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }

# HTTP client cho API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bất đồng bộ và đa luồng
tokio = { version = "1", features = ["full"] }

# Ghi log
log = "0.4"
env_logger = "0.10"

# Text-to-Speech (TTS) - crate tương đương với pyttsx3
tts = "0.25"

# Chụp màn hình
screenshots = "0.8"

# Base64 encoding
base64 = "0.21"

# Tiện ích
rand = "0.8"
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
embed-resource = "2.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1" 